<resources>
    <string name="app_name" translatable="false">Darts Scorecard</string>
    <string name="first_to">First to %1$s</string>
    <string name="single_mode">individual</string>
    <string name="all_mode">total</string>
    <string name="set">Set</string>
    <string name="leg">Leg</string>
    <string name="no_score">No Score</string>
    <string name="bust">Bust</string>
    <string name="undo">Undo</string>
    <string name="tap_to_resume">Tap to Resume</string>
    <string name="resume">Resume</string>
    <string name="title_create_profile">Create Profile</string>
    <string name="title_select_profile">Select Profile</string>
    <string name="title_select_player">Select Player</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_setup">Configure 01 Game</string>
    <string name="title_beta">Beta Features</string>
    <string name="title_settings">Settings</string>
    <string name="title_wtf">@string/wtf</string>
    <string name="title_hiscores">Hiscores</string>
    <string name="resume_x01">@string/resume</string>
    <string name="play_x01">Start new 01</string>
    <string name="profiles">Manage Profiles</string>
    <string name="hiscores">Hiscores</string>
    <string name="beta">New Features</string>
    <string name="settings">Settings</string>
    <string name="wtf">What the FAQ</string>
    <string name="stream_start">Start Stream</string>
    <string name="stream_stop">Stop Stream</string>
    <string name="msg_permissions">Camera and audio access is needed to Stream</string>
    <string name="error_permissions_couldnt_start_settings">Couldn\'t open app settings. To grant permissions please visit settings of this app.</string>
    <string name="action_settings">Settings</string>
    <string name="vote">VOTE</string>
    <string name="number_votes">%1$s VOTES</string>
    <string name="donation_button">%1$s %2$s</string>
    <string name="donation_thanks">You are AWESOME &amp; will no longer see those annoying ads ;)</string>
    <string name="donation_ok">THANKS</string>
    <string name="votes_explained">&lt;p>Once this feature has &lt;b>%1$s&lt;/b> votes, development will start.&lt;/p>&lt;p>All Donations &lt;b>include removing all ads&lt;/b> from the app&lt;/p></string>
    <string name="beta_video">&lt;b>Watch the video&lt;/b></string>
    <string name="beta_tagline">Most popular features, will be developed first</string>
    <string name="beta_explained">Let us know which feature you would like to see next. Select \'VOTE\' &amp; click the \u2764! We\'ll do our best</string>
    <string name="select_players">Select Players</string>
    <string name="choose_player_name">Choose player name</string>
    <string name="choose_existing_player">Or choose existing players</string>
    <string name="choose_available_bot">Play against a bot</string>
    <string name="cannot_change_bot_name">It\'s not possible to change the bots name</string>
    <string name="team">Team</string>
    <string name="select_x01_score">Select x01 score</string>
    <string name="start_score">Start score</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="number_of_legs">Number of legs</string>
    <string name="cancel">Cancel</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="cont">Continue</string>
    <string name="powered_by">Powered by</string>
    <string name="rating_title">Enjoying Darts Scorecard?</string>
    <string name="rating_message">Do you have a second to rate our app?\nWe would really appreciate that</string>
    <string name="rating_never_ask_again">Nope</string>
    <string name="rating_not_now">Not now</string>
    <string name="confirm_delete_title">Delete this Game?</string>
    <string name="confirm_delete_message">All progress and stats for this Game will be removed</string>
    <string name="to_throw">to throw</string>
    <string name="to_throw_first">to throw first</string>
    <string name="game_on">Game on</string>
    <string name="game_shot_and_match">Revanche?</string>
    <string name="select_starting_team">Select Team to throw first</string>
    <string name="favourite_double">Favourite double: %1$s</string>
    <string name="edit_player_name_hint">Player name</string>
    <string name="edit_player_double">Favourite double</string>
    <string name="confirm_delete_profile">Profile deleted</string>
    <string name="darts_used">How many darts did you use?</string>
    <string name="match_stats">Match Statistics</string>
    <string name="set_stats">Set %1$s Statistics</string>
    <string name="live_breaks_made">Breaks Made</string>
    <string name="live_double_success">Double Success</string>
    <string name="live_double_ratio">Double %</string>
    <string name="live_highest_score">Highest Score</string>
    <string name="live_highest_out">Highest Out</string>
    <string name="live_180s">180\'s</string>
    <string name="live_140s">140+</string>
    <string name="live_100s">100+</string>
    <string name="live_60s">60+</string>
    <string name="live_20s">20+</string>
    <string name="live_average">average</string>
    <string name="streaming_dialog_title">Enter Code</string>
    <string name="streaming_service">Streaming Service</string>
    <string name="receiving_service">Receiving Service</string>
    <string name="live_stream_start">Start Streaming</string>
    <string name="live_stream_connecting">Connecting…</string>
    <string name="live_stream_connect">Connect</string>
    <string name="live_stream">Live Stream</string>
    <string name="enter_tv_code">Enter code</string>
    <string name="streaming_channel_name">Streaming</string>
    <string name="streaming_channel_description">Your camera output is being streamed to the TV</string>
    <string name="streaming_notif_title">Streaming to Television</string>
    <string name="no_stats_available">No Data available yet</string>
    <string name="no_stats_available_sub">Complete a game and come back here to see how you\'re doing</string>
    <string name="profile_games_played">Games Played</string>
    <string name="profile_overall_average">Overall average</string>
    <string name="profile_first9_average">1st 9 average</string>
    <string name="profile_win_percentage">Win %</string>
    <string name="profile_checkout_percentage">Checkout %</string>
    <string name="profile_num_180">#180\'s</string>
    <string name="profile_num_140">#140+</string>
    <string name="profile_num_100">#100+</string>
    <string name="profile_num_60">#60+</string>
    <string name="profile_num_20">#20+</string>
    <string name="profile_num_0">#Bust/ Bounce/ NoScore</string>
    <string name="hiscore_title_games_ratio">Win Ratio</string>
    <string name="hiscore_title_best_avg">Best Avg</string>
    <string name="hiscore_title_best_co">Best Checkout %</string>
    <string name="hiscore_title_highest_score">Highest Score</string>
    <string name="hiscore_title_highest_co">Highest Checkout</string>
    <string name="hiscore_title_overall_average">Overall average</string>
    <string name="hiscore_title_first9_average">1st 9 average</string>
    <string name="hiscore_title_win_percentage">Win %</string>
    <string name="hiscore_title_checkout_percentage">Checkout %</string>
    <string name="hiscore_title_num_180">#180\'s</string>
    <string name="hiscore_title_num_140">#140+</string>
    <string name="hiscore_title_num_100">#100+</string>
    <string name="hiscore_title_num_60">#60+</string>
    <string name="hiscore_title_num_20">#20+</string>
    <string name="hiscore_title_num_0">#Bust/ Bounce/ NoScore</string>
    <string name="hiscore_description_games_win_ratio">Won vs Played ratio</string>
    <string name="hiscore_description_best_avg">Best average during a single match</string>
    <string name="hiscore_description_best_co">Best checkout % during a single match</string>
    <string name="hiscore_description_overall_average">Overall average</string>
    <string name="hiscore_description_first9_average">Overall average of the 1st nine darts</string>
    <string name="hiscore_description_win_percentage">Overall % of games won</string>
    <string name="hiscore_description_checkout_percentage">Overall checkout %</string>
    <string name="hiscore_description_num_180">Overall #180\'s scored</string>
    <string name="hiscore_description_num_140">Overall #140+ scored</string>
    <string name="hiscore_description_num_100">Overall #100+ scored</string>
    <string name="hiscore_description_num_60">Overall #60+ scored</string>
    <string name="hiscore_description_num_20">Overall #20+ scored</string>
    <string name="hiscore_description_num_0">Overall #Bust/ Bounce/ NoScore\'s scored</string>
    <string name="search_wtf">Search in F.A.Q.</string>
    <string name="settings_mastercaller_title">Sound Settings</string>
    <string name="settings_mastercaller_desc_on">Read all scores aloud</string>
    <string name="settings_mastercaller_desc_off">Don\'t user Mastercaller</string>
    <string name="settings_sound_title">Sound</string>
    <string name="settings_sound_desc_on">Play music in the background</string>
    <string name="settings_sound_desc_off">No music in the background</string>
    <string name="settings_theme_title">Theming</string>
    <string name="settings_theme_desc">Swap the available themes</string>
    <string name="settings_privacy_title">Privacy / Ads</string>
    <string name="settings_privacy_desc">Change Ad Preference</string>
    <string name="settings_privacy_thanks">Thanks for your Support!\nNo data is collected for the purpose of showing ads</string>
    <string name="settings_ads_remove">Remove Ads</string>
    <string name="archive_service">Archive Stats Service</string>
    <string name="archive_channel_name">Archive stats</string>
    <string name="archive_channel_description">Calculating stats &amp; averages</string>
    <string name="archive_notif_title">Calculating new stats, averages &amp; hiscores</string>
    <string name="pcf_match">Players Championship Finals</string>
    <string name="bdo_match">BDO World Cup - semi finals</string>
    <string name="pdc_match">PDC World Cup - semi finals</string>
    <string name="err_player_was_deleted">Cannot view profile of Players that have been deleted.</string>
    <string name="err_profile_with_bot_not_supported">Profile for Teams with a Bot are not available</string>
    <string name="err_unable_to_retrieve_game">Unable to retrieve game.</string>
    <string name="err_unable_to_revanche">Unable to get revenge for ya.</string>
    <string name="err_unable_to_create_player">Unable to create player.</string>
    <string name="err_unable_to_donate">Unable to donate for features at the moment.</string>
    <string name="err_unable_to_fetch_players">Unable to fetch players.</string>
    <string name="err_unable_to_fetch_stats">Unable to fetch statistics for player</string>
    <string name="err_player_already_exists">Player name already exists. Please choose a different name</string>
    <string name="err_invalid_player_name">Invalid player name</string>
    <string name="err_player_name_is_empty">Please type desired player name</string>
    <string name="err_no_players_yet">No Profiles yet. Play a Game, or create players using the + button</string>
    <string name="err_player_already_in_match">Player is already participating in this match</string>
    <string name="cd_score_back">delete</string>
    <string name="cd_throw">Submit darts</string>
    <string name="cd_add_player">Add player</string>
    <string name="cd_choose_sets">@string/number_of_sets</string>
    <string name="cd_choose_legs">@string/number_of_legs</string>
    <string name="cd_increase_sets">Plus 1 set</string>
    <string name="cd_decrease_sets">Minus 1 set</string>
    <string name="cd_increase_legs">Plus 1 leg</string>
    <string name="cd_decrease_legs">Minus 1 leg</string>
</resources>