<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_setup_01">

    <data>

        <variable
            name="viewModel"
            type="nl.entreco.dartsscorecard.setup.settings.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Setup.Hdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/score_header"
            android:orientation="horizontal"
            android:padding="@dimen/xsmall"
            android:text="@string/select_x01_score" />

        <RelativeLayout
            style="@style/Setup.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Setup.Entry.Txt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="@string/start_score" />

            <TextView
                style="@style/Setup.Entry.Spinner"
                android:layout_width="@dimen/setup_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@{@string/number(viewModel.startScore)}" />

            <androidx.appcompat.widget.AppCompatSpinner
                style="@style/Setup.Spinner"
                android:layout_width="@dimen/setup_width"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:entries="@array/x01"
                android:onItemSelected="@{(adapter,i,index,l) -> viewModel.onStartScoreSelected(adapter,index)}"
                android:selectedItemPosition="@={viewModel.startScoreIndex}" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/score_header_middle"
            android:orientation="horizontal">

            <TextView
                style="@style/Setup.Hdr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="@dimen/xsmall"
                android:text="@string/number_of_sets" />

            <TextView
                style="@style/Setup.Hdr.End"
                android:layout_width="@dimen/setup_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/xsmall"
                android:text="@string/first_to" />
        </LinearLayout>

        <LinearLayout
            style="@style/Setup.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Setup.Entry.Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_decrease_sets"
                android:onClick="@{() -> viewModel.onSetsChanged(setupSets, -1)}"
                android:text="@string/minus" />

            <SeekBar
                android:id="@+id/setup_sets"
                style="@style/Setup.Progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@{viewModel.max}"
                android:contentDescription="@string/cd_choose_sets"
                android:onProgressChanged="@{(view, sets, user) -> viewModel.onSetsProgressChanged(sets)}"
                android:progress="@{viewModel.numSets}" />

            <TextView
                style="@style/Setup.Entry.Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_increase_sets"
                android:onClick="@{() -> viewModel.onSetsChanged(setupSets, +1)}"
                android:text="@string/plus" />

            <TextView
                style="@style/Setup.Entry.Value"
                android:layout_width="@dimen/setup_width"
                android:layout_height="wrap_content"
                android:background="@drawable/score_pts"
                android:text="@{@string/number(viewModel.numSets + 1)}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/score_header_middle"
            android:orientation="horizontal">

            <TextView
                style="@style/Setup.Hdr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="@dimen/xsmall"
                android:text="@string/number_of_legs" />

            <TextView
                style="@style/Setup.Hdr.End"
                android:layout_width="@dimen/setup_width"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/xsmall"
                android:text="@string/first_to" />
        </LinearLayout>

        <LinearLayout
            style="@style/Setup.Entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/Setup.Entry.Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onLegsChanged(setupLegs, -1)}"
                android:contentDescription="@string/cd_decrease_legs"
                android:text="@string/minus" />

            <SeekBar
                android:id="@+id/setup_legs"
                style="@style/Setup.Progress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/cd_choose_legs"
                android:max="@{viewModel.max}"
                android:onProgressChanged="@{(view, legs, user) -> viewModel.onLegsProgressChanged(legs)}"
                android:progress="@{viewModel.numLegs}" />

            <TextView
                style="@style/Setup.Entry.Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onLegsChanged(setupLegs, +1)}"
                android:contentDescription="@string/cd_increase_legs"
                android:text="@string/plus" />

            <TextView
                style="@style/Setup.Entry.Value"
                android:layout_width="@dimen/setup_width"
                android:layout_height="wrap_content"
                android:background="@drawable/score_pts"
                android:text="@{@string/number(viewModel.numLegs + 1)}" />
        </LinearLayout>

        <!-- Footer -->
        <TextView style="@style/Setup.Ftr" />
    </LinearLayout>
</layout>